--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "repository": "git@github.com:krystianity/blockchain.git",
   "author": "Chris Froehlingsdorf <chris@5cf.de>",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "private": true,
   "scripts": {
     "build": "yarn ts:build",
@@ -23,7 +23,7 @@
     "crypto-js": "~3.1.9-1",
     "debug": "~3.1.0",
     "express": "~4.16.3",
-    "keypair": "^1.0.1",
+    "keypair": "~1.0.1",
     "request": "~2.85.0",
     "sequelize": "~4.37.6",
     "sqlite3": "~4.0.0",
