--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "blockchain",
+  "name": "blockchain-ts",
   "version": "1.0.0",
   "main": "dist/index.js",
   "repository": "git@github.com:krystianity/blockchain.git",
   "author": "Chris Froehlingsdorf <chris@5cf.de>",
   "license": "Apache-2.0",
-  "private": true,
   "scripts": {
     "build": "yarn ts:build",
     "_start": "DEBUG=blockchain:* node dist/index.js",
@@ -18,21 +17,21 @@
     "test:consensus": "yarn build && DEBUG=blockchain:silence CONSENSUS_TEST=1 ./node_modules/.bin/_mocha --recursive --timeout 5000 --exit -R spec test/int"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
-    "cors": "~2.8.4",
-    "crypto-js": "~3.1.9-1",
-    "debug": "~3.1.0",
-    "express": "~4.16.3",
-    "keypair": "~1.0.1",
-    "request": "~2.85.0",
-    "sequelize": "~5.3.0",
-    "sqlite3": "~4.0.0",
-    "uuid": "~3.2.1"
+    "body-parser": "~1.19.0",
+    "cors": "~2.8.5",
+    "crypto-js": "~4.0.0",
+    "debug": "~4.3.1",
+    "express": "~4.17.1",
+    "keypair": "~1.0.3",
+    "request": "~2.88.2",
+    "sequelize": "~6.6.2",
+    "sqlite3": "~5.0.2",
+    "uuid": "~8.3.2"
   },
   "devDependencies": {
-    "@types/node": "~9.4.7",
-    "mocha": "~5.1.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "@types/node": "~15.6.1",
+    "mocha": "~8.4.0",
+    "tslint": "~6.1.3",
+    "typescript": "~4.3.2"
   }
 }
